# meterly-pipeline-test

./: .checkov.yaml  .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  PROJECT.md  README.md  alembic.ini  osv-scanner.toml  pyproject.toml  renovate.json
.claude/: settings.json  settings.local.json
.github/workflows/: build-provenance.yml  dast-staging.yml  deploy.yml  dr-drill.yml  load-campaign.yml  pipeline-ci.yml  scheduled-rescan.yml
alembic/: README.md  env.py
alembic/versions/: 0001_create_api_keys_and_events.py  0002_create_usage_rollup_backfill.py  0003_create_quotas_and_api_key_scope.py  0004_force_rls_usage_rollup.py  0005_force_rls_events.py
docs/: finding-ledger.md  system_architecture.md
infra/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  variables.tf
scripts/: README.md  seed_api_key.py  smoke_import_check.py
scripts/ci/: asvs-sast.sh  dast-review.sh  (+3 more)
src/: README.md  __init__.py  main.py
tests/: README.md  __init__.py  conftest.py  test_app_smoke.py  test_auth_api_key.py  test_crypto.py  test_csv_export.py  test_dashboard_dependency_pins.py  test_dashboard_reader.py  test_dashboard_reader_secret_iac.py  test_dashboard_service.py  test_dast_context_documented.py  test_db_session_isolation.py  test_dependency_pins.py  test_logging_redaction.py  test_rate_limit_fail_open.py  test_schemas_dashboard.py  test_schemas_events.py  test_schemas_quotas.py  test_schemas_usage.py  test_schemas_usage_daily.py  test_schemas_usage_export.py  test_slo_alarms_defined.py  test_time_windows.py  test_usage_export_service.py
(+158 files in other folders)
